vm-b/kubernetes/services/crab.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: crab
  labels:
    app: crab

spec:
  replicas: 1
  selector:
    matchLabels:
      app: crab
  template:
    metadata:
      labels:
        app: crab
    spec:
      containers:
        - name: crab
          image: movie/crab
          imagePullPolicy: Never
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: crab

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: crab
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /movie
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crab-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /movie
        pathType: Prefix
        backend:
          service:
            name: crab
            port:
              name: web
