vm-b/kubernetes/services/snake.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: snake
  labels:
    app: snake

spec:
  replicas: 1
  selector:
    matchLabels:
      app: snake
  template:
    metadata:
      labels:
        app: snake
    spec:
      containers:
        - name: snake
          image: aschil/snake
          ports:
            - name: web
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: snake

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: snake
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snake
            port:
              name: web
